--- a/semantic-segmentation.ipynb
+++ b/semantic-segmentation.ipynb
@@ -2040,7 +2040,7 @@
     "              }\n",
     "\n",
     "# . . define the callbacks\n",
-    "cb=[ReturnBestModel(monitor='train_loss'), EarlyStopping(monitor='train_loss', min_delta=min_delta, patience=patience)]\n",
+    "cb=[ReturnBestModel(monitor='valid_loss'), EarlyStopping(monitor='valid_loss', min_delta=min_delta, patience=patience)]\n",
     "\n",
     "trainer.compile(optimizer='adam', criterion=criterion, callbacks=cb, jprint=jprint, **optimparams)\n",
     "\n",
@@ -8453,8 +8453,8 @@
    "source": [
     "# . . test the trained network\n",
     "# . . retrieve a new batch\n",
-    "#images, masks_true = next(iter(validloader))\n",
-    "images, masks_true = next(iter(trainloader))\n",
+    "images, masks_true = next(iter(validloader))\n",
+    "#images, masks_true = next(iter(trainloader))\n",
     "\n",
     "# . . send images to device\n",
     "images = images.to(device)\n",
